spacing fix

--- a/Slate/src/chat/_messages.scss
+++ b/Slate/src/chat/_messages.scss
@@ -167,7 +167,6 @@
       padding-bottom: var(--spacing);
       .container-1ov-mD {
         max-width: 100%;
-        padding-bottom: 0;
       }
       .header-23xsNx {
         align-items: center;
