--- a/Slate/src/inputs/_button.scss
+++ b/Slate/src/inputs/_button.scss
@@ -53,7 +53,7 @@
     color: var(--text-link);
     height: auto;
     min-height: unset;
-    cursor: default;
+    cursor: pointer;
     &:hover .contents-18-Yxp {
       background-image: linear-gradient(0deg,transparent,transparent 1px,var(--text-link) 0,var(--text-link) 2px,transparent 0);
     }
